fix overflow page issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,6 @@
 }
 
 main {
-  width: 100%;
   border-radius: 4px;
   background-color: $white;
   box-shadow: 0px 2px 5px #13182c1a;
